# NimCW

./: .clang-format  CMakeLists.txt  README.md  build.bat  build.sh
.cache/clangd/index/: BasicDLL.cpp.7980ED09C170459A.idx  Test.h.70FBE5AA914CA938.idx  example.cpp.439929DDBEC1C5C2.idx  example.cpp.A8EA40C6C8BCDF9B.idx
Example/: example.cpp
NimCWManaged/: Test.nim  script1.nim
NimCWNative/include/: Base.h  BasicDLL.h  NimCW.h
NimCWNative/src/: BasicDLL.cpp  NimCW.cpp
docs/: api_reference.md  index.md
tests/: test_nim_scripts.cpp  test_nimcw_native.cpp
